--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
 		<span style="color: #aaa"> DRON 2019 </span>
 	</div>
 	<audio id="audio" src="sound/how.mp3" type="audio/mpeg" preload="auto" autoplay>
+	<script type="text/javascript">
+      // autoplay is disabled on mobile web
+      document.addEventListener('touchend', function handleTouch () {
+      	document.getElementById('audio').play();
+      });
+  	</script>
 </body>
 </html>
