--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-54922810-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-54922810-1');
+	</script>
+
 	<title> I'VE MADE MY MISTAKES </title>
 	<link rel="stylesheet" type="text/css" href="css/styling.css"/>
 </head>
